kubernetes/dev/ingress/monitoring-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "prometheus.k8s.aravindweb.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kube-prometheus-stack-prometheus
              port:
                number: 9090

  - host: "grafana.k8s.aravindweb.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kube-prometheus-stack-grafana
              port:
                number: 80
